--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -6,134 +6,135 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
     <style>
-    .back-to-top {
-        position: fixed;
-        bottom: 1rem;
-        right: 0.8rem;
-        background-color: #000;
-        color: #fff;
-        border: 2px solid #fff;
-        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        opacity: 0;
-        transition: opacity 0.3s ease-in-out;
-        z-index: 1000;
-    }
-    .back-to-top.visible{
-        opacity: 0.8;
-    }
-    .back-to-top{
-        width: 40px;
-        height: 40px;
-        border-radius: 50%;
-    }
-    .back-to-top::before{
-        content: '↑';
-        color: #fff;
-        font-size: 22px;
-    }
-    @media (min-width: 640px) {
-        .back-to-top{
+        .back-to-top {
+            position: fixed;
+            bottom: 1rem;
+            right: 0.8rem;
+            background-color: #000;
+            color: #fff;
+            border: 2px solid #fff;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            opacity: 0;
+            transition: opacity 0.3s ease-in-out;
+            z-index: 1000;
+        }
+        .back-to-top.visible {
+            opacity: 0.8;
+        }
+        .back-to-top {
             width: 40px;
             height: 40px;
             border-radius: 50%;
         }
-        .back-to-top::before{
-        content: '↑';
-        color: #fff;
-        font-size: 22px;
+        .back-to-top::before {
+            content: '↑';
+            color: #fff;
+            font-size: 22px;
         }
-    }
-    @media (min-width: 768px){
-        .back-to-top{
-            width: 85px;
-            height: 40px;
-            border-radius: 8px;
-            bottom: 1.5rem;
-            right: 1.5rem;
+        @media (min-width: 640px) {
+            .back-to-top {
+                width: 40px;
+                height: 40px;
+                border-radius: 50%;
+            }
+            .back-to-top::before {
+                content: '↑';
+                color: #fff;
+                font-size: 22px;
+            }
         }
-        .back-to-top::before{
-            content: 'Book now';
-            font-size: 10px;
-    }
-}
-    @media (min-width: 1024px) {
-        .back-to-top{
-            width: 85px;
-            height: 38px;
-            border-radius: 8px;
-            bottom: 1.5rem;
-            right: 1.5rem;
+        @media (min-width: 768px) {
+            .back-to-top {
+                width: 85px;
+                height: 40px;
+                border-radius: 8px;
+                bottom: 1.5rem;
+                right: 1.5rem;
+            }
+            .back-to-top::before {
+                content: 'Book now';
+                font-size: 10px;
+            }
         }
-        .back-to-top::before{
-            content: 'Book now';
-            font-size: 12px;
-    }
-    }
-
+        @media (min-width: 1024px) {
+            .back-to-top {
+                width: 85px;
+                height: 38px;
+                border-radius: 8px;
+                bottom: 1.5rem;
+                right: 1.5rem;
+            }
+            .back-to-top::before {
+                content: 'Book now';
+                font-size: 12px;
+            }
+        }
     </style>
 </head>
-
 <body>
     <header class="navbar fixed top-0 left-0 w-full z-50">
         {% include '/sections/navbar.html' %}
     </header>
-    <main class="pt-[50px]"> 
-    <section class="banner relative">
-        {% include '/sections/banner.html' %}
-    </section>
-    <section id="gallery" class="gallery">
-        {% include '/sections/gallery.html' %}
-    </section>
-    <section id="artist" class="artist">
-        {% include '/sections/artist.html' %}
-    </section>
-    <section id="services" class="services">
-        {% include '/sections/services.html' %}
-    </section>
-    <section id="location" class="location relative z-10">
-        {% include '/sections/location.html' %}
-    </section>
-    <section id="ratings" class="feedback relative z-10">
-        {% include '/sections/feedback.html' %}
-    </section>
-    <section class="footer">
-        {% include '/sections/footer.html' %}
-    </section>
+    <main class="pt-[50px]">
+        <section class="banner relative">
+            {% include '/sections/banner.html' %}
+        </section>
+        <section id="gallery" class="gallery">
+            {% include '/sections/gallery.html' %}
+        </section>
+        <section id="artist" class="artist">
+            {% include '/sections/artist.html' %}
+        </section>
+        <section id="services" class="services">
+            {% include '/sections/services.html' %}
+        </section>
+        <section id="location" class="location relative z-10">
+            {% include '/sections/location.html' %}
+        </section>
+        <section id="ratings" class="feedback relative z-10">
+            {% include '/sections/feedback.html' %}
+        </section>
+        <section class="footer">
+            {% include '/sections/footer.html' %}
+        </section>
     </main>
     <button class="back-to-top" aria-label="Back to top"></button>
 
-<script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
-<script>
-  const socket = io("http://localhost:5000");
-  socket.on("connect", () => {
-    console.log("✅ Connected to server via WebSocket");
-  });
+    <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
+    <script src="{{ url_for('static', filename='js/sections/feedback.js') }}"></script> <!-- Added explicitly -->
+    <script>
+        const socket = io("http://localhost:5000");
+        socket.on("connect", () => {
+            console.log("✅ Connected to server via WebSocket");
+        });
 
-  document.addEventListener('DOMContentLoaded', () =>{
-    const backToTopButton = document.querySelector('.back-to-top');
-    const bannerSection = document.querySelector('.banner');
+        document.addEventListener('DOMContentLoaded', () => {
+            const backToTopButton = document.querySelector('.back-to-top');
+            const bannerSection = document.querySelector('.banner');
 
-    backToTopButton.addEventListener("click", () => {
-    window.scrollTo({ top: 0, behavior: "smooth" });
-    });
-    const observer = new IntersectionObserver(
-        (entries) => {
-            entries.forEach(entry => {
-                    if (entry.isIntersecting){
-                        backToTopButton.classList.remove('visible');
-                    }
-                    else{
-                        backToTopButton.classList.add('visible');
-                    }
+            backToTopButton.addEventListener("click", () => {
+                window.scrollTo({ top: 0, behavior: "smooth" });
             });
-        }, { threshold: 0.1 }
-    );
-    observer.observe(bannerSection);
-  });
-</script>
+            const observer = new IntersectionObserver(
+                (entries) => {
+                    entries.forEach(entry => {
+                        if (entry.isIntersecting) {
+                            backToTopButton.classList.remove('visible');
+                        } else {
+                            backToTopButton.classList.add('visible');
+                        }
+                    });
+                }, { threshold: 0.1 }
+            );
+            observer.observe(bannerSection);
+        });
+    </script>
 </body>
 </html>
