--- a/app/templates/sections/feedback.html
+++ b/app/templates/sections/feedback.html
@@ -9,6 +9,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.43/moment-timezone-with-data.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
@@ -19,11 +20,11 @@
     <div class="w-auto lg:h-[500px] h-auto flex flex-col lg:flex-row justify-center p-6 lg:gap-4 bg-[#191919]">
 
         <!-- Ratings & Reviews -->
-        <section class="bg-white rounded-lg p-4 max-w-sm lg:w-[320px] w-[320px] md:w-[700px] lg:h-[220px] h-[190px] md:h-auto lg:mt-[60px] mt-[15px] shadow-[4px_4px_10px_rgba(255,255,255,0.3),-4px_-4px_10px_rgba(255,255,255,0.3)] hover:shadow-[4px_4px_16px_rgba(255,255,255,0.6),-4px_-4px_16px_rgba(255,255,255,0.6)] transition duration-300 md:ml-[180px]">
+        <section class="bg-white rounded-lg p-4 max-w-sm lg:w-[330px] w-[320px] md:w-[700px] lg:h-[220px] h-[190px] md:h-auto lg:mt-[60px] mt-[15px] shadow-[4px_4px_10px_rgba(255,255,255,0.3),-4px_-4px_10px_rgba(255,255,255,0.3)] hover:shadow-[4px_4px_16px_rgba(255,255,255,0.6),-4px_-4px_16px_rgba(255,255,255,0.6)] transition duration-300 md:ml-[180px]">
             <div class="flex flex-col items-start">
                 <h3 class="font-faustina text-[20px] md:text-[25px] font-bold text-gray-800 mb-2 ml-2">Ratings and Reviews</h3>
-                <div class="flex items-start gap-6 lg:gap-6 md:gap-6">
-                    <div class="flex flex-col items-center mt-2 ml-2">
+                <div class="flex items-start gap-6 lg:gap-8 md:gap-6">
+                    <div class="flex flex-col items-center mt-2 ml-4">
                         <div class="text-6xl lg:text-7xl md:text-7xl font-montserrat leading-none text-black">{{ average_rating | default(0.0) }}</div>
                         <div class="flex items-center gap-1">
                             {% set full_stars = ((average_rating | default(0.0)) // 1) | int %}
